<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">FinalTask1</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="webClientId">620838854725-pm0rtu47poaivvpct8i7h7dr20oiulsm.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="favorite_city">Favorite City</string>
    <string name="secondary_email">Secondary Email</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="contact_number">Contact Number</string>
    <string name="add">add</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="save">Save</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_to_your_account">Sign in to your account.</string>
    <string name="sign_up">Sign Up</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="sampleEmail">email@email.com</string>
</resources>