<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:text="" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text="" />

        <EditText
            android:id="@+id/user_contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number"
            android:text="" />

        <EditText
            android:id="@+id/user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:text="" />

        <EditText
            android:id="@+id/user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:text="" />

        <EditText
            android:id="@+id/user_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:text="" />

        <EditText
            android:id="@+id/user_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language"
            android:text="" />

        <EditText
            android:id="@+id/user_secondEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/secondary_email"
            android:text=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/user_favCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/favorite_city"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#9C27B0"
                android:text="@string/add"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>