<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/regi_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/regi_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/regi_Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_Country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_Language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/language"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_SecondryEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secondary_email"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/regi_FavoriteCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/favorite_city"
        android:inputType="text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />
</LinearLayout>